--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 
   <!-- Contenuto centrale -->
   <div class="content">
-    <h1>COMPLIMENTI!!! HAI VINTOOOOO!!!1!</h1>
+    <h1>!!!!! BUON COMPLEANNO, MATT0CS !!!1! </h1>
     <h2>Sei stato scelto per ricevere un meraviglioso regalo!!!</h2>
     <p>Un LANCIAGRANATE M23-A1 CON 6 GRANATE FLSH IN OMAGGIO! WOW!!!</p>
     <img id="slideshow" src="img/1.jpg" alt="Slideshow">
     
-    <button id="youtubeBtn">>>> CLICCA QUI (per riceverlo in game GRATIS!!) <<<</button>
+    <button id="youtubeBtn">>>> CLICCA QUI (per ottenerlo ANCHE SU CONSOLE!!) <<<</button>
   </div>
 
   <!-- GIF sotto il contenuto -->
@@ -172,3 +172,4 @@
 
 </body>
 </html>
+
