--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     .gif {
       width: auto;
-      height: 160px;
+      height: 140px;
       margin: 5px 0;
     }
 
@@ -46,7 +46,7 @@
 	.intro-text {
 	  font-size: 16px;
       color: #ccc;
-      margin: 5px 0 10px 0;
+      margin: 5px 0 5px 0;
       text-align: center;
 	  font-weight: bold;
     }
@@ -73,7 +73,7 @@
     }
 
     #slideshow {
-      width: 65%;
+      width: 70%;
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -112,12 +112,12 @@
 
   <!-- Contenuto centrale -->
   <div class="content">
-    <h1>!!!!! BUON COMPLEANNO, MATT0CS !!!1! </h1>
+    <h1>!!!HAPPY B-DAY MATT0CS!1! </h1>
     <h2>Sei stato scelto per ricevere un meraviglioso regalo!!!</h2>
     <p>Un LANCIAGRANATE M23-A1 CON 6 GRANATE FLSH IN OMAGGIO! WOW!!!</p>
     <img id="slideshow" src="img/1.jpg" alt="Slideshow">
     
-    <button id="youtubeBtn">>>> CLICCA QUI (per ottenerlo ANCHE SU CONSOLE!!) <<<</button>
+    <button id="youtubeBtn">>>> CLICCA QUI (per ottenerlo ANCHE SU CONSOLE!!!) <<<</button>
   </div>
 
   <!-- GIF sotto il contenuto -->
